<resources>
    <string name="app_name">Flypool Monitor</string>
    <string name="big_title_app">FlyPool</string>
    <string name="small_title_app">ZCash Mining Pool</string>
    <string name="btn_ok">OK</string>
    <string name="immature_balance">Immature Balance</string>
    <string name="current_hashrate">Current</string>
    <string name="average_hashrate">Average</string>
    <string name="hashrate">HASHRATE</string>
    <string name="shares">SHARES</string>
    <string name="upaid_balance">Unpaid Balance</string>
    <string name="next_payout">Next Payout</string>
    <string name="title_worker">Workers</string>
    <string name="valid">Valid</string>
    <string name="stale">Stale</string>
    <string name="invalid">Invalid</string>
    <string name="last_seen">Last Seen</string>
    <string name="last_shares">Last Shares</string>
    <string name="zcash">\u0020 ZCash</string>
    <string name="btc">BTC</string>
    <string name="usd">USD</string>
    <string name="zec">ZEC</string>
    <string name="zec_btc">ZEC/BTC</string>
    <string name="zec_usd">ZEC/USD</string>
    <string name="btc_usd">BTC/USD</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="your_worker">Your Worker</string>
    <string name="current">Current</string>
    <string name="reported">Reported</string>
    <string name="average">Average</string>
    <string name="total">TOTAL</string>
    <string name="pool_settings">Miner Settings</string>
    <string name="email_address">Email Address</string>
    <string name="payment_threshold">Payment Threshold</string>
    <string name="worker_public_IP">Worker Public IP</string>
    <string name="your_payouts">Your payouts</string>
    <string name="duration">Duration</string>
    <string name="TxHash">TxHash</string>
    <string name="last">LAST</string>
    <string name="eth_address">Address</string>
    <string name="title_account">Account</string>
    <!--change text account-->
    <string name="unit_zec">\u0020 kH/s</string>
    <string name="change_notification">Notification when worker offline\n(no current hashrate on ethermine)</string>
    <string name="reported_hashrate_highlight">Reported:\u0020</string>
    <string name="current_hashrate_highlight">Current:\u0020</string>
    <string name="average_hashrate_highlight">Average:\u0020</string>
    <string name="worker_highlight">Worker:\u0020</string>
    <string name="title_id_suggestions">Most recently used wallet addresses:</string>
    <string name="send_email">Send a mail if one of my workers goes offline</string>
    <string name="edit_by_zcash">Edit on zcash.flypool.org</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="remove_ads">Remove Ads</string>
    <string name="more_apps_my_us">More apps by us</string>
    <string name="feedback_to_us">Feedback to us</string>
    <string name="views_ads_to_donate">View &amp; click ads to donate us</string>
    <string name="rate_us">Rate us 5 stars</string>
    <string name="view_modes">View mode</string>
    <string name="both_landscape_and_portrait">Both</string>
    <string name="only_landscape">Landscape</string>
    <string name="only_portrait">Portrait</string>
    <string name="view_mode">View Mode:\u0020</string>

    <!--view modes-->
    <string-array name="view_modes">
        <item>Both Landscape and Portrait</item>
        <item>Only Landscape</item>
        <item>Only Portrait</item>
    </string-array>
</resources>
