<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_your_worker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/your_worker"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="25dp"
        android:background="@color/item_listview"
        android:textColor="@color/colorWhite"
        android:text="@string/your_worker"
        android:textSize="10sp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="2dp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/ln_current"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="2dp"
        android:background="@color/item_listview"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/currents"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_marginRight="1dp"
            android:layout_height="25dp"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_average"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="2dp"
        android:background="@color/item_listview"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="10sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_shares"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="2dp"
        android:background="@color/item_listview"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/valid"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:text="@string/valid"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/stale"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:ellipsize="end"
            android:text="@string/stale"
            android:textColor="@color/colorWhite"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/invalite"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:textColor="@color/colorWhite"
            android:text="@string/invalid"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="10sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_last_screen"
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:layout_height="25dp"
        android:gravity="center"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="2dp"
        android:background="@color/item_listview"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/last_screen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"
            android:layout_marginRight="1dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="  m"
            android:textSize="10sp"
            android:layout_marginRight="1dp" />
        </LinearLayout>
</LinearLayout>