<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edt_id_miner"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:background="@color/colorWhite"
                            android:hint="@string/eth_address"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:scrollHorizontally="true"
                            android:imeOptions="actionDone"
                            android:singleLine="true" />

                        <Button
                            android:id="@+id/button_mining_pool"
                            android:layout_width="wrap_content"
                            android:layout_height="42dp"
                            android:padding="10dp"
                            android:text="@string/btn_ok" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_id_suggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical"
                    android:paddingBottom="4dp"
                    android:paddingTop="0dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/title_id_suggestions"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        android:textStyle="bold|italic" />
                    <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:background="@color/colorWhite"/>-->
                    <LinearLayout
                        android:id="@+id/list_suggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"></LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="0dp">

                    <ListView
                        android:id="@+id/list_id_miner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="0dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
